<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Location And Internet Must be Turn On!!"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:text="Get Location!"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLatLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="LatLong!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_standard_new"
        android:layout_marginEnd="@dimen/spacing_standard_new"
        android:layout_marginBottom="@dimen/spacing_standard_new"
        android:background="@drawable/bg_rectangle_order"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingStart="@dimen/spacing_standard_new"
            android:paddingTop="@dimen/spacing_standard"
            android:paddingEnd="@dimen/spacing_standard_new"
            android:paddingBottom="@dimen/spacing_standard"
            android:text="@string/lbl_payment_details"
            android:textColor="@color/textColorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_standard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/lbl_loca"
                    android:textColor="@color/colorPrimary_sec" />

                <TextView
                    android:id="@+id/textaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_control"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/lbl_city"
                    android:textColor="@color/colorPrimary_sec" />

                <TextView
                    android:id="@+id/textlocality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_control"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/ques"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:layout_marginBottom="@dimen/spacing_control"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_state"
                    android:textColor="@color/colorPrimary_sec" />

                <TextView
                    android:id="@+id/textstate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_control"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/ques"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    tools:text="$50" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:layout_marginBottom="@dimen/spacing_control"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:text="@string/country"
                    android:textColor="@color/colorPrimary_sec" />

                <TextView
                    android:id="@+id/textcountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_control"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/ques"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    tools:text="$50" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:layout_marginBottom="@dimen/spacing_control"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:text="@string/pincode"
                    android:textColor="@color/colorPrimary_sec" />

                <TextView
                    android:id="@+id/textcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_control"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/ques"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    tools:text="$50" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:layout_marginBottom="@dimen/spacing_control"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:text="@string/dictrict"
                    android:textColor="@color/colorPrimary_sec" />

                <TextView
                    android:id="@+id/textdistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_control"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/ques"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    tools:text="$50" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_standard"
        android:layout_marginTop="@dimen/spacing_standard"
        android:layout_marginEnd="@dimen/spacing_standard"
        android:layout_marginBottom="@dimen/spacing_control"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:text="MapView :"
            android:layout_marginStart="15dp"
            android:textColor="@color/colorPrimary_sec" />


    </LinearLayout>

</LinearLayout>